<resources>
    <string name="app_name">DriveJob</string>

    <!-- Logo -->
    <string name="logoname" translatable="false">Name</string>
    <string name="logoimage" translatable="false">Image</string>
    <string name="logocomplete" translatable="false">Complete</string>

    <!-- Login Activity -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="not_account">No account yet? Create one</string>
    <string name="recover_password">Forgot password?</string>
    <string name="enter_email">Enter your email</string>
    <string name="email_sent">Email sent</string>
    <string name="authenticating">Authenticating…</string>
    <string name="phone">Phone</string>

    <!-- SignUp Activity -->
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="re_password">Re-enter Password</string>
    <string name="create_account">Create Account</string>
    <string name="already_member">Already a member? Login</string>
    <string name="email_verify">Verify your email</string>
    <string name="creating_account">Creating account…</string>

    <!-- Menu Activity -->
    <string name="menu">Menu</string>
    <string name="create_ride">Create Ride</string>
    <string name="search">Search</string>
    <string name="myCar">My cars</string>
    <string name="noCarsWarning">First, you must add a car</string>

    <!-- CreateRide Activity -->
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="going">Going</string>
    <string name="returning">Returning</string>
    <string name="selectTime">Select Time</string>
    <string name="days">Days</string>
    <string name="price">Price</string>
    <string name="passengers">Passengers</string>
    <string name="selectCar">Select car</string>
    <string name="avSeatsDay">Seats left per day</string>

    <!-- RideDetail Activity -->
    <string name="ride_detail">Ride</string>
    <string name="edit">Edit</string> <!-- Menu -->
    <string name="delete">Delete</string>
    <string name="fromDetail">From: %s</string> <!-- Form -->
    <string name="toDetail">To: %s</string>
    <string name="goingDetail">Going: %s</string>
    <string name="returningDetail">Returning: %s</string>
    <string name="daysDetail">Days: %s</string>
    <string name="priceDetail">Price: %d</string>
    <string name="avSeatsDayDetail">Avalaible seats left per day: %s</string>
    <string name="carDetail">Car: %s</string>
    <string name="join_ride">Join</string> <!-- List -->
    <string name="exit_ride">Exit</string> <!-- List -->
    <string name="usersjoin">Joined</string>
    <string name="usersrequest">Requests</string>
    <string name="accept">Accept</string>
    <string name="refuse">Refuse</string>
    <string name="updating_ride">Updating ride</string>

    <!-- SearchRide Activity -->
    <string name="searchresults">Search results</string>
    <string name="timeHour" translatable="false">00:00</string>

    <!-- MyRideActivity -->
    <string name="ride_created">Created</string>
    <string name="ride_request">Requests</string>
    <string name="ride_join">Joins</string>

    <!-- MyCarActivity -->
    <string name="car">Car</string>
    <string name="add_car">Add car</string>
    <string name="edit_car">Edit car</string>
    <string name="delete_car">Delete car</string>
    <string name="carBrand">Brand</string>
    <string name="carModel">Model</string>
    <string name="engine">Engine</string>

    <string-array name="engineType">
        <item>Gasoline</item>
        <item>Diesel</item>
        <item>Hybrid</item>
        <item>Electric</item>
    </string-array>

    <!-- DialogText -->
    <string name="ok_label">Ok</string>
    <string name="cancel_label">Cancel</string>
    <string name="dismiss_label">Dismiss</string>
    <string name="clear_all_label">Clear all</string>

    <!-- Days -->
    <string-array name="daysofweek">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

    <string-array name="shortdaysofweek">
        <item>Mo</item>
        <item>Tu</item>
        <item>We</item>
        <item>Th</item>
        <item>Fr</item>
        <item>Sa</item>
        <item>Su</item>
    </string-array>

    <!-- ProfileActivity-->
    <string name="checkEmail">Check email</string>

    <!-- Menu -->
    <string name="profile">Profile</string>
    <string name="myrides">My rides</string>
    <string name="settings">Settings</string>
    <string name="logout">Log out</string>

    <!-- Settings -->
    <string name="preferences">Preferences</string>
    <string name="distance">Max distance</string>
    <string name="time">Max time</string>
    <string name="goDis" translatable="false">$1</string>
    <string name="metres">Metres</string>
    <string name="goTime" translatable="false">$1</string>
    <string name="minutes">Minutes</string>
    <string name="privacy">Privacy</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- Maps -->
    <string name="title_activity_maps">Maps</string>

    <!-- Notifications -->
    <string name="notUserRequestTitle">Request</string>
    <string name="notUserRequestText">User %s has requested to join your ride</string>
    <string name="notRefuseJoinTitle">Refused</string>
    <string name="notRefuseJoinText">User %s has refused your request</string>
    <string name="notAcceptJoinTitle">Accepted</string>
    <string name="notAcceptJointText">User %s has accepted your request to join ride</string>
    <string name="notKickJoinTitle">Kicked</string>
    <string name="notKickJoinText">User %s has kicked you</string>
    <string name="notExitRideTitle">Exited</string>
    <string name="notExitRideText">User %s has exited from your ride</string>
    <string name="notEditRideTitle">Edited</string>
    <string name="notEditRideText">User %s has edited ride</string>
    <string name="notDeleteRideTitle">Deleted</string>
    <string name="notDeleteRideText">User %s has deleted ride</string>

    <!-- Errors in forms -->
    <string name="notNull">Not null</string>
    <string name="notZero">Not 0</string>
    <string name="notAvSeatsSpace">There are no seats</string>

    <!-- Pictures -->
    <string name="pictureUsername" translatable="false">Username picture</string>
    <string name="pictureAccept" translatable="false">Accept picture</string>
    <string name="pictureRefuse" translatable="false">Refuse picture</string>
    <string name="pictureElectric" translatable="false">Electric picture</string>

    <string name="users">Users</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

</resources>