<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginStart="@dimen/activity_vertical_margin"
    android:layout_marginEnd="@dimen/activity_vertical_margin"
    tools:context=".MenuActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/menu_margin"
        android:src="@drawable/logoname"
        android:contentDescription="@string/logoname" />

    <!--  Create Button -->
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_create"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/menu_margin"
        android:text="@string/create_ride"
        android:onClick="createRideMenu"/>

    <!--  Search Button -->
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_search"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/menu_margin"
        android:text="@string/search"
        android:onClick="searchRideMenu"/>

    <!--  MyRides Button -->
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_myrides"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/menu_margin"
        android:text="@string/myrides"
        android:onClick="myRidesMenu"/>

    <!--  Car Button -->
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_car"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/menu_margin"
        android:text="@string/myCar"
        android:onClick="myCarMenu"/>
</LinearLayout>
