<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="40dp"
    android:layout_marginRight="20dp"
    android:layout_marginLeft="20dp"
    tools:context=".RideDetailActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentTop="true"
        android:background="@color/white"
        />

    <ImageView
        android:id="@+id/authorImage"
        android:layout_width="25dp"
        android:layout_height="30dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/ic_account_circle_white_24dp"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/profile" />

    <TextView
        android:id="@+id/requestUsername"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:textSize="15sp"
        android:text="@string/name"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/authorImage" />

    <ImageButton
        android:id="@+id/btnRefuse"
        android:layout_width="25dp"
        android:layout_height="20dp"
        android:src="@drawable/ic_cancel_white_24dp"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:contentDescription="@string/refuse" />

    <ImageButton
        android:id="@+id/btnAccept"
        android:layout_width="25dp"
        android:layout_height="20dp"
        android:src="@drawable/ic_check_circle_white_24dp"
        android:layout_alignTop="@+id/requestUsername"
        android:layout_toStartOf="@+id/btnRefuse"
        android:contentDescription="@string/accept" />

</RelativeLayout>