<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginStart="@dimen/activity_vertical_margin"
    android:layout_marginEnd="@dimen/activity_vertical_margin"
    android:layout_marginTop="@dimen/default_margin"
    android:fitsSystemWindows="true"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".RideCreateActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--  PlaceGoing Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText android:id="@+id/input_placeGoing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textAutoComplete"
                android:focusable="false"
                android:hint="@string/from"
                android:onClick="startMaps"/>
        </android.support.design.widget.TextInputLayout>

        <!--  PlaceReturn Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText android:id="@+id/input_placeReturn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textAutoComplete"
                android:focusable="false"
                android:hint="@string/to"
                android:onClick="startMaps"/>
        </android.support.design.widget.TextInputLayout>

        <!--  TimeGoing Picker -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText android:id="@+id/input_timeGoing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="time"
                android:focusable="false"
                android:hint="@string/going"
                android:onClick="showTime" />
        </android.support.design.widget.TextInputLayout>

        <!--  TimeReturn Picker -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText android:id="@+id/input_timeReturn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="time"
                android:focusable="false"
                android:hint="@string/returning"
                android:onClick="showTime" />
        </android.support.design.widget.TextInputLayout>

        <!--  Days Picker -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText android:id="@+id/input_days"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="time"
                android:focusable="false"
                android:hint="@string/days"
                android:onClick="selectDays" />
        </android.support.design.widget.TextInputLayout>

        <!--  Price Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText android:id="@+id/input_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/price"/>
        </android.support.design.widget.TextInputLayout>

        <!--  Passengers Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText android:id="@+id/input_passengers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/passengers"/>
        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:id="@+id/spinner_car"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_create"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/create_ride"
            android:onClick="createRide"/>

    </LinearLayout>
</ScrollView>