<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".SearchResultActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/android_card_view_example2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:elevation="@dimen/default_margin">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/min_margin">

            <ImageView
                android:id="@+id/authorImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:contentDescription="@string/pictureUsername"
                android:src="@drawable/ic_account_circle_black_24dp" />

            <ImageView
                android:id="@+id/electricIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/authorImage"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="4dp"
                android:contentDescription="@string/pictureElectric"
                android:src="@drawable/ic_electric_car"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/authorImage"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_toEndOf="@+id/authorImage"
                android:text="@string/name"
                android:textSize="@dimen/list_bigTextSize"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/placeFrom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/username"
                android:layout_marginTop="5dp"
                android:text="@string/fromDetail"
                android:textSize="@dimen/list_textSize" />

            <TextView
                android:id="@+id/placeTo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/placeFrom"
                android:text="@string/toDetail"
                android:textSize="@dimen/list_textSize" />

            <TextView
                android:id="@+id/timeFrom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/placeFrom"
                android:layout_alignParentEnd="true"
                android:gravity="end"
                android:text="@string/timeHour"
                android:textSize="@dimen/list_textSize" />

            <TextView
                android:id="@+id/timeTo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/timeFrom"
                android:gravity="end"
                android:text="@string/timeHour"
                android:textSize="@dimen/list_textSize" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:layout_below="@id/placeTo"
                android:layout_marginTop="@dimen/default_margin"
                android:background="@color/white" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>