<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    tools:context=".RideDetailActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentTop="true"
        android:background="@color/black" />

    <ImageView
        android:id="@+id/authorImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/pictureUsername"
        android:src="@drawable/ic_account_circle_black_24dp"/>

    <TextView
        android:id="@+id/joinUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_alignTop="@id/authorImage"
        android:layout_toEndOf="@+id/authorImage"
        android:textSize="@dimen/list_textSize"
        android:text="@string/name"/>

    <ImageButton
        android:id="@+id/btnKick"
        android:layout_width="25dp"
        android:layout_height="20dp"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:background="@android:color/transparent"
        android:visibility="invisible"
        android:contentDescription="@string/pictureRefuse"
        android:src="@drawable/ic_cancel_black_24dp"/>


</RelativeLayout>